Implemented services and character view

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -2,6 +2,8 @@ $color-primary: #000000
 $color-secondary: #EC1D24
 $background-color: #F0F0F0
 $text-color: #fff
-$gradient: linear-gradient(270deg, #EC1D24, #ff4980)
+$gradient: linear-gradient(270deg, #4d2829, #e6e6e6)
 $main-contrast: #fff
 $main-font: 'Open Sans'
+$small: 560px
+$medium: 900px
