implemented Favorites funcionalities: states, view and counter

--- a/src/Components/Header/Header.sass
+++ b/src/Components/Header/Header.sass
@@ -26,8 +26,11 @@
     font-size: 2rem
     margin: 1rem 0
     text-align: center
-    & > .favorites_counter
+    & > a 
+      text-decoration: none
+    & > a .favorites_counter
       vertical-align: middle
       font-size: 1rem
       text-align: center
       color: $text-color
+      margin-left: 10px
