--- a/src/Pages/Character/Character.sass
+++ b/src/Pages/Character/Character.sass
@@ -45,6 +45,7 @@
     text-transform: uppercase
     position: relative
     & > .add_favorite
+        cursor: pointer
         float: right
     & > .add_favorite > img
         z-index: 10
@@ -85,7 +86,6 @@
   flex-flow: row nowrap
   align-items: center
   color: $color-primary
-  justify-content: space-evenly
   margin: 0px auto
   padding: 0 0 20px
   box-sizing: border-box
