--- a/src/Components/Card/Card.sass
+++ b/src/Components/Card/Card.sass
@@ -11,10 +11,13 @@
   margin: 0px auto 10px
   padding: 0px
   box-sizing: border-box
-  cursor: pointer
   position: relative
   transition: all .3s ease-out
-  & > .thumb
+  & > a
+    width: 200px
+    height: 200px
+    margin: 0
+  & > a .thumb
     width: 200px
     height: 200px
     margin: 0
@@ -30,11 +33,13 @@
     justify-content: space-between
   & > .card_name p
     text-transform: uppercase
+    text-decoration: none
     color: $text-color
     font-size: .8rem
     z-index: 10
   & > .card_name > .add_favorite
     z-index: 10
+    cursor: pointer
   & > .card_name > .add_favorite > img
     width: 15px
     z-index: 10
@@ -59,5 +64,7 @@
     transition: all .3s ease-out
 .character_card:hover > .card_name:before
     height: 100%
+.character_card:hover .card_name  .add_favorite img
+    filter: brightness(10)
 
   
