--- a/src/Pages/Home/Home.sass
+++ b/src/Pages/Home/Home.sass
@@ -12,3 +12,10 @@
   margin: 0px auto
   padding: 2%
   box-sizing: border-box
+  & > h5
+    background-image: linear-gradient(270deg, #4f56ff, #ff4980)
+    background-clip: text
+    -webkit-text-fill-color: transparent
+    margin:  0 0 30px
+    font-size: .8rem
+    width: 100%
